Gap fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -4,15 +4,19 @@
   gap: $gap;
 
   @media (min-width: 488px) {
-    grid-template-columns: repeat(auto-fill, minmax($card-width, 1fr));
+    grid-template-columns: repeat(1, $card-width);
   }
 
   @media (max-width: 767px) and (min-width: 488px) {
-    grid-template-columns: repeat(2, minmax($card-width, 1fr));
+    grid-template-columns: repeat(2, $card-width);
   }
 
   @media (max-width: 1023px) and (min-width: 768px) {
-    grid-template-columns: repeat(3, minmax($card-width, 1fr));
+    grid-template-columns: repeat(3, $card-width);
+  }
+
+  @media (min-width: 1024px) {
+    grid-template-columns: repeat(4, $card-width);
   }
   max-width: 944px;
   margin: 0 auto;
